--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,7 @@ jobs:
 
   deploy: 
     needs: build
-    runs-on: runs-on: self-hosted    
+    runs-on: self-hosted    
     steps:
       - name: Pull image from docker hub
         run: docker pull aanukool23/portfolio:latest 
